# NLP_UniPD_2025

./: README.md  pyproject.toml
Day_1/01_TextProcessing/: 01_BasicTextProcessing.ipynb
Day_1/01_TextProcessing/.ipynb_checkpoints/: 01_BasicTextProcessing-checkpoint.ipynb
Day_1/02_nGramsLangugeModels/: kaggle_notebook_ngram.ipynb
Day_1/02_nGramsLangugeModels/.ipynb_checkpoints/: 01_ngram_LM-checkpoint.ipynb  kaggle_notebook_ngram-checkpoint.ipynb
Day_1/03_NaiveBayes/: 02_NaiveBayes.ipynb
Day_1/03_NaiveBayes/.ipynb_checkpoints/: 01_BagOfWords-checkpoint.ipynb
Day_1/04_LogisticRegression/: 01_LogisticRegression.ipynb
Day_1/04_LogisticRegression/.ipynb_checkpoints/: 01_LogisticRegression-checkpoint.ipynb
Day_1/05_Embeddings/: 01_TF-IDF.ipynb  02_Word2Vec.ipynb  03_WordsSimilarity_with_Glove.ipynb  04_OpenAI_Embedding.ipynb
Day_1/06_NeuralNetworks/: 01_NeuralNetworks_sentiment.ipynb  02_Embeddings+NN.ipynb  03_simple-neural-language-model.ipynb
Day_1/06_NeuralNetworks/.ipynb_checkpoints/: 01_NeuralNetworks_sentiment-checkpoint.ipynb
Day_2/01_RNN/: 01_LSTM_sentiment.ipynb  02_LSTM+Embeddings.ipynb
Day_2/01_RNN/.ipynb_checkpoints/: 02_LSTM+Embeddings-checkpoint.ipynb  03_RNN_language-model-checkpoint.ipynb
Day_2/02_Transformers/hugging_face_tutorials/: quicktour.ipynb  task_summary.ipynb
Day_2/03_LargeLanguageModels/: 02_PromptEngineering.ipynb
Day_2/04_RAG/: 01_SimplestRAG.ipynb  RAG_from_Scratch.ipynb  advanced_rag.ipynb  example.docx
slides/: 01_TextProcessing.pptx  03_NaiveBayes.pptx  10_RAG.pptx
(+1 files in other folders)
