[project]
name = "nlp-unipd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.4.1",
    "dotenv>=0.9.9",
    "gensim>=4.3.3",
    "jupyterlab>=4.4.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openai>=1.70.0",
    "python-docx>=1.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.4",
    "tensorflow>=2.18.1",
    "transformers>=4.51.0",
    "unidecode>=1.3.8",
]
